# FinLogic

./: .gitignore  Dockerfile  LICENSE  README.md  company.py  create_pk_ds.ipynb  cvm.py  dataset.py  explore.ipynb  explore_company.ipynb  explore_dataset.ipynb  explore_dk.ipynb  explore_pa.ipynb  explore_pk.ipynb  pyproject.toml  requirements.txt  run.py  setup.py  super_query.py  test.ipynb  test_dataset.ipynb
b3finance/: dataset.py
bfin/: __init__.py
bfinance/: __init__.py  company.py  corporation.py  dataset.py
brfin/: __init__.py  company.py  dataset.py  explore.py  explore_company.ipynb  explore_dataset.ipynb  finance.py  financial.py  run.py
brfin/tests/: company_class.py  explore_company.ipynb
brfinance/: __init__.py  corporation.py  dataset.py  finance.py  run.py
data/: last_session_data.csv
docs/cvm_columns_description/: meta_dfp_cia_aberta_BPP.txt  meta_dfp_cia_aberta_DVA.txt  meta_itr_cia_aberta.txt  meta_itr_cia_aberta_DMPL.txt
finatic/: __init__.py  company.py  dp.py
finlogic/: __init__.py  builder.py  company.py  config.py  constants.py  currency.py  cvm.py  data.py  data_manager.py  database.py  db_debug.py  dp.py  fduckdb.py  finlogic_db.py  finprint.py  fl_duckdb.py  indicators.py  language.py  reports.py
finlogic/data/interim/: pten_df.csv.zst
src/finlogic/: __init__.py  company.py  data.py  indicators.py
tests/: company_class.py  context.py  corporation.ipynb  dataset.ipynb  dataset_module.ipynb  explore_company.ipynb  explore_dataset.ipynb  finance_class.ipynb  finance_class.py  financial_class.ipynb  financial_class.py  indicators_sites.txt  package_test.ipynb  readme.ipynb  rrrp.xlsx  setup.py  test_basic.py  test_company.py  test_data.py  test_database.py
tests/data/: petr_ind_con.pkl  petr_ind_sep.pkl
tests/results/: agro_ind_con.pkl  agro_ind_sep.pkl  petr_ind_con.pkl  petr_ind_sep.pkl
