[build-system]
requires = ["uv_build>=0.11.14,<0.12"]
build-backend = "uv_build"

[project]
name = "FinLogic"
version = "0.7.0"
description = "Finance toolkit for listed Brazilian companies"
requires-python = ">=3.14"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["polars", "cvm", "finance", "investment", "accounting"]
authors = [
    {name = "Carlos Carvalho", email = "cr.cj@outlook.com"}
]
classifiers = [
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "polars>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ipykernel>=6.0.0",
]

[project.urls]
repository = "https://github.com/crdcj/FinLogic"
